changes for lab 2 and 3

--- a/ansible/hostname.yml
+++ b/ansible/hostname.yml
@@ -1,13 +1,7 @@
+# ansible/hostname.yml
 ---
 - name: Update hostname
   hosts: target
   become: yes
-  tasks:
-    - name: Set hostname
-      hostname:
-        name: name-surename-lab2
-    
-    - name: Update /etc/hostname file
-      copy:
-        content: "name-surename-lab2\n"
-        dest: /etc/hostname
+  roles:
+    - update_hostname
